# fon

./: .gitignore  Cargo.toml  NOTE.md  README.md
contracts/freight/: Cargo.toml  README.md
contracts/freight/src/: errors.rs  instructions.rs  lib.rs  main.rs  types.rs  utils.rs  validations.rs
deployment/: deploy-fresh.toml  deploy.toml
deployment/migration/: 2026-03-20-165912.json  2026-03-21-144156.json
deployment/migration-fresh/: 2026-03-23-155302.json  2026-03-23-203340.json  2026-03-23-213057.json
deployment/txs/: deploy-fresh-info.json  deploy-info.json  upgrade-fresh-info.json  upgrade-info.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/create/: page.tsx
frontend/lib/: contract.ts  encoding.ts  transactions.ts
scripts/: deploy.sh  upgrade.sh
tests/: Cargo.toml
tests/src/: tests.rs
