[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
ckb-testtool = "1.0"
serde_json = "1.0"
freight = { path = "../contracts/freight", features = ["library"] }
secp256k1 = { version = "0.28", features = ["global-context"] }
ckb-hash = "1.0"
