[package]
name = "freight"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "1.0"
ckb-hash = { version = "1.0", default-features = false, features = ["ckb-contract"] }
# alloc (no std, no global-context) so this builds on both riscv64 (no_std) and the host
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }


[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
